File updated to the lastest english version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@307745 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/expressions.xml
+++ b/language/expressions.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 297028 $ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: seros Status: ready -->
+<!-- $Revision$ -->
+<!-- EN-Revision: 1c2e2710c3b38d1af03434f72456f2547c0aa733 Maintainer: seros Status: ready -->
  <chapter xml:id="language.expressions" xmlns="http://docbook.org/ns/docbook">
    <title>Expresiones</title>
    <simpara>
@@ -80,11 +80,7 @@ function foo ()
     post-incremento y decremento. Los usuarios de PHP y de otros muchos
     lenguajes pueden estar familiarizados con la notación <literal>variable++</literal> y
     <literal>variable--</literal>. Éstos son los <link linkend="language.operators.increment">
-    operadores de incremento y decremento</link>. En
-    PHP/FI 2, la sentencia '<varname>$a</varname>++' no tinen valor (no es una
-    expresión), por lo que no se puede asignar o usar de manera alguna.
-    PHP mejora las capacidades de los operadores de incremento/decremento haciéndolos    
-    también expresiones, como en C. En PHP, al igual que en C, hay
+    operadores de incremento y decremento</link>. En PHP, al igual que en C, hay
     dos tipos de incrementos - pre-incremento y post-incremento.
     Ambos esencialmente incrementan la
     variable, y el efecto sobre la variable es idéntico. La
