Fixing broken build.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@308239 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/functions.xml
+++ b/language/functions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 301351 $ -->
+<!-- $Revision$ -->
 <!-- EN-Revision: c1e20705f557cb8e7742dea28bc6546b676bebe5 Maintainer: seros Status: ready -->
  <chapter xml:id="language.functions" xmlns="http://docbook.org/ns/docbook">
   <title>Funciones</title>
@@ -701,7 +701,7 @@ class Carro
     const PRECIO_LECHE       = 3.00;
     const PRECIO_HUEVOS      = 6.95;
 
-    protected   $productos = array();
+    protected $productos = array();
     
     public function añadir($producto, $cantidad)
     {
