--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: deda9f1f013b490691870f3f1a085b1961f3413c Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: a7ef3cd8b10e789795d716f18f7139c5ee292edb Maintainer: jpberdejo Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
@@ -222,6 +222,10 @@ $a = true ? 0 : true ? 1 : 2; // (true ? 0 : true) ? 1 : 2 = 2
 $a = 1;
 $b = 2;
 $a = $b += 3; // $a = ($b += 3) -> $a = 5, $b = 5
+
+// mezclar ++ y + produce un comportamiento indefinido
+$a = 1;
+echo ++$a + $a++; // puede mostrar 4 o 5
 ?>
 ]]>
      </programlisting>
@@ -1119,7 +1123,7 @@ Expression: 0 = -4 << 62
       <row>
        <entry>$a == $b</entry>
        <entry>Igual</entry>
-       <entry>&true; si <varname>$a</varname> es igual a <varname>$b</varname>.</entry>
+       <entry>&true; si <varname>$a</varname> es igual a <varname>$b</varname> después de la manipulación de tipos.</entry>
       </row>
       <row>
        <entry>$a === $b</entry>
@@ -1132,7 +1136,7 @@ Expression: 0 = -4 << 62
       <row>
        <entry>$a != $b</entry>
        <entry>Diferente</entry>
-       <entry>&true; si <varname>$a</varname> no es igual a <varname>$b</varname>.</entry>
+       <entry>&true; si <varname>$a</varname> no es igual a <varname>$b</varname> después de la manipulación de tipos.</entry>
       </row>
       <row>
        <entry>$a &lt;&gt; $b</entry>
