Files updated to the lastest english version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@308374 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types.xml
+++ b/language/types.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: lboshell Status: ready -->
+<!-- $Revision$ -->
+<!-- EN-Revision: 28359dc5d49dd2a10378915626aeb4120699ef4e Maintainer: x1v4nx Status: ready -->
+<!-- Reviewed: no -->
+
 <chapter xml:id="language.types" xmlns="http://docbook.org/ns/docbook">
  <title>Tipos</title>
 
@@ -160,7 +162,7 @@ if (is_int($un_int)) {
     $un_int += 4;
 }
 
-// Si $bool es una cadena, imprimirla
+// Si $a_bool es una cadena, imprimirla
 // (no imprime nada)
 if (is_string($un_bool)) {
     echo "Cadena: $un_bool";
