updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@308508 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/array.xml
+++ b/language/types/array.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- EN-Revision: 88723b48e9d5f812144a12d490f3dd3461a024b4 Maintainer: yago Status: ready -->
 <sect1 xml:id="language.types.array">
  <title>Arrays</title>
 
@@ -719,7 +719,7 @@ foreach ($colors as $color) {
   </para>
 
   <example xml:id="language.types.array.examples.changeloop">
-   <title>Colección</title>
+   <title>Cambiando elemento en el bucle</title>
    <programlisting role="php">
 <![CDATA[
 <?php
