Updated to latest version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@308541 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/predefined/exception/getfile.xml
+++ b/language/predefined/exception/getfile.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- $Revision$ -->
+<!-- EN-Revision: b03f9198d2722d69d6dfdaf74b3d4a92a9861f81 Maintainer: agarzon Status: ready -->
 <refentry xml:id="exception.getfile" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>Exception::getFile</refname>
@@ -14,7 +14,7 @@
    <void />
   </methodsynopsis>
   <para>
-   Obtiene el nombre del fichero desde donde fue lanzada la excepción.
+   Obtiene el nombre del fichero desde donde fue creada la excepción.
   </para>
  </refsect1>
  
@@ -26,7 +26,7 @@
  <refsect1 role="returnvalues">
   &reftitle.returnvalues;
   <para>
-   Devuelve el nombre del fichero en donde fue lanzada la excepción.
+   Devuelve el nombre del fichero en donde fue creada la excepción.
   </para>
  </refsect1>
 
