English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@308828 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: a7ef3cd8b10e789795d716f18f7139c5ee292edb Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 7913c8c0ce4fcfda9f63459f632ef0a8abcfdef6 Maintainer: jpberdejo Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
@@ -1141,7 +1141,7 @@ Expression: 0 = -4 << 62
       <row>
        <entry>$a &lt;&gt; $b</entry>
        <entry>Diferente</entry>
-       <entry>&true; si <varname>$a</varname> no es igual a <varname>$b</varname>.</entry>
+       <entry>&true; si <varname>$a</varname> no es igual a <varname>$b</varname> después de la manipulación de tipos.</entry>
       </row>
       <row>
        <entry>$a !== $b</entry>
