Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@309121 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 9b48b9178166cf5e205b16763d0d431cd3cd7c0c Maintainer: seros Status: ready -->
+<!-- EN-Revision: 4c514c4b8947e94d4fc6ae5d7c79ca4ea14e65c3 Maintainer: seros Status: ready -->
 <chapter xml:id="language.namespaces" xmlns="http://docbook.org/ns/docbook"
 version="1.1">
  <title>Espacios de Nombres</title>
@@ -592,8 +592,9 @@ $b = namespace\CONSTANTE; // asigna el valor de la constante CONSTANTE a $b
    de los sistemas de archivos basados en Unix de crear enlaces simbólicos a un archivo o directorio.
   </para>
   <para>
-   Los espacios de nombres de PHP soportan dos
-   tipos de poner alias o importar: apodar un nombre de clase, y apodar un nombre de espacio de nombres.
+   Los espacios de nombres de PHP soportan
+   tres tipos de poner alias o importar: apodar un nombre de clase, apodar un nombre de interfaz,
+   y apodar un nombre de espacio de nombres.
    Observe que importar una función o una constante no está soportado.
   </para>
   <para>
@@ -611,13 +612,13 @@ use Mi\Completo\NombreDeClase as Otra;
 use Mi\Completo\NombreEN;
 
 // importar una clase global
-use \ArrayObject;
+use ArrayObject;
 
 $obj = new namespace\Otra; // instancia un obejto de la clase foo\Otra
 $obj = new Otra; // instancia un obejto de la clase class Mi\Completo\NombreDeClase
 NombreEN\suben\func(); // llama a la función Mi\Completo\NombreEN\subes\func
 $a = new ArrayObject(array(1)); // instancia un obejto de la clase ArrayObject
-// sin el "use \ArrayObject" instanciaríamos un objeto de la clase foo\ArrayObject
+// sin el "use ArrayObject" instanciaríamos un objeto de la clase foo\ArrayObject
 ?>
 ]]>
     </programlisting>
@@ -625,7 +626,7 @@ $a = new ArrayObject(array(1)); // instancia un obejto de la clase ArrayObject
    Observe que para los nombres de espacios de nombres (nombres de espacios de nombres completamente
    cualificados que contienen el separador de espacios de nombres, como <literal>Foo\Bar</literal> en
    oposición a los nombres globales que no lo contienen, como <literal>FooBar</literal>), no es necesaria
-   y no está permitida la barra invertida inicial, ya que los nombres importados
+   y no está recomendada la barra invertida inicial, ya que los nombres importados
    deben ser completamente cualificados, y no son porcesados relativos al espacio de nombres actual.
   </para>
   <para>
