updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@309363 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/predefined/exception/getline.xml
+++ b/language/predefined/exception/getline.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- $Revision$ -->
+<!-- EN-Revision: b03f9198d2722d69d6dfdaf74b3d4a92a9861f81 Maintainer: yago Status: ready -->
 <refentry xml:id="exception.getline" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>Exception::getLine</refname>
@@ -14,7 +14,7 @@
    <void />
   </methodsynopsis>
   <para>
-   Devuelve el número de la línea en donde fue lanzada la excepción.
+   Devuelve el número de la línea donde se creó la excepción.
   </para>
  </refsect1>
  
@@ -26,7 +26,7 @@
  <refsect1 role="returnvalues">
   &reftitle.returnvalues;
   <para>
-   Devuelve el número de la línea en donde fue lanzada la excepción.
+   Devuelve el número de la línea donde se creó la excepción.
   </para>
  </refsect1>
 
@@ -41,7 +41,7 @@
 try {
     throw new Exception("Algún mensaje de error");
 } catch(Exception $e) {
-    echo "La excepción fue lanzada en la línea: " . $e->getLine();
+    echo "La excepción se creó en la línea: " . $e->getLine();
 }
 ?>
 ]]>
@@ -49,7 +49,7 @@ try {
     &example.outputs.similar;
     <screen>
 <![CDATA[
-La excepción fue lanzada en la línea: 3
+La excepción se creó en la línea: 3
 ]]>
     </screen>
    </example>
