--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 4c514c4b8947e94d4fc6ae5d7c79ca4ea14e65c3 Maintainer: seros Status: ready -->
+<!-- EN-Revision: e5430e16c1516dce04ff7e2d9591dbc2b049511f Maintainer: seros Status: ready -->
 <chapter xml:id="language.namespaces" xmlns="http://docbook.org/ns/docbook"
 version="1.1">
  <title>Espacios de Nombres</title>
@@ -1000,7 +1000,7 @@ D::foo();   // usando las reglas de importación, se llama al método "foo" de l
 A\B::foo();   // se llama al método "foo" de la clase "B" desde el espacio de nombres "A\A"
               // si no se encuentra la clase "A\A\B", se intenta autocargar la clase "A\A\B"
 
-\A\B::foo();  // se llama al método "foo" de la clase "B" desde el espacio de nombres "A\B"
+\A\B::foo();  // se llama al método "foo" de la clase "B" desde el espacio de nombres "A"
               // si no se encuentra la clase "A\B", se intenta autocargar la clase "A\B"
 ?>
 ]]>
