Actualizo todos los ficheros libres
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@310066 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/wrappers/rar.xml
+++ b/language/wrappers/rar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 6ee7facd42a9462a74259d003110848c30251c9a Maintainer: chuso Status: ready -->
+<!-- EN-Revision: c28944d8333c9b522912d3af5d4de37cef7d82e3 Maintainer: chuso Status: ready -->
 
 <refentry xml:id="wrappers.rar" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -23,7 +23,7 @@
    signo asterisco obliga a que los nombres de las entradas del directorio se devuelvan decodificados.
    Si no se especifica, se devolverán codificadas como URL – esto es así para permitir
    hacer un uso correcto de la envoltura con determinadas funcionalidades, como
-   <type>RecursiveDirectoryIterator</type> cuando se está en presencia de nombres de
+   <classname>RecursiveDirectoryIterator</classname> cuando se está en presencia de nombres de
    ficheros que podrían parecen datos codificados como URL.
   </simpara>
   
@@ -32,7 +32,7 @@
    del fichero. La diferencia respecto a directorios convencionales es que el flujo
    no contendrá determinada información, tal como la fecha de modificación, dado que el directorio raíz
    no se almacena dentro el fichero comprimido en de una entrada individual.
-   Para usar la envoltura con <type>RecursiveDirectoryIterator</type> es necesario
+   Para usar la envoltura con <classname>RecursiveDirectoryIterator</classname> es necesario
    que al acceder al raíz se incluya el signo de número en la URL, para que así
    las URLs de los nodos hijo se puedan construir correctamente.
   </simpara>
