--- a/language/predefined/variables/argc.xml
+++ b/language/predefined/variables/argc.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- EN-Revision: cff6fa6abc65d088f4e93aa35a09c38c000fe79f Maintainer: chuso Status: ready -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.argc" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -22,8 +22,8 @@
   </note>
   <note>
    <simpara>
-    Esta variable no está disponible cuando <link linkend="ini.register-argc-argv">register_argc_argv</link>
-    está desactivado.
+    Esta variable sólo está disponible cuando <link linkend="ini.register-argc-argv">register_argc_argv</link>
+    está activado.
    </simpara>
   </note>
  </refsect1>
