English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@310125 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/wrappers/php.xml
+++ b/language/wrappers/php.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 6ee7facd42a9462a74259d003110848c30251c9a Maintainer: chuso Status: ready -->
+<!-- EN-Revision: b715f40087cc001bc3e69f35f4a1cb842a806ea6 Maintainer: jpberdejo Status: ready -->
 
 <refentry xml:id="wrappers.php" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -58,6 +58,12 @@
   </simpara>
 
   <simpara>
+   <filename>php://fd</filename> permite el acceso directo al descriptor de archivo
+   dado. Por ejemplo, <filename>php://fd/3</filename> refiere al descriptor
+   de archivo 3.
+  </simpara>
+
+  <simpara>
    <filename>php://filter</filename> es una especie de meta-envoltura diseñada
    para permitir el filtrado de flujos en las aperturas.
    Esto es muy útil en las funciones todo en uno, como
@@ -83,6 +89,7 @@
    <listitem><simpara><filename>php://filter</filename> (disponible desde PHP 5.0.0)</simpara></listitem>
    <listitem><simpara><filename>php://memory</filename> (disponible desde PHP 5.1.0)</simpara></listitem>
    <listitem><simpara><filename>php://temp</filename> (disponible desde PHP 5.1.0)</simpara></listitem>
+   <listitem><simpara><filename>php://fd</filename> (available since PHP 5.3.6)</simpara></listitem>
   </itemizedlist>
  </refsect1> <!-- }}} -->
 
@@ -109,53 +116,57 @@
       <row>
        <entry>Restringido por <link linkend="ini.allow-url-include">allow_url_include</link></entry>
        <entry>
-        solo <literal>php://input</literal>,
+        <literal>php://input</literal>,
         <literal>php://stdin</literal>,
         <literal>php://memory</literal> y
-        <literal>php://temp</literal>.
+        <literal>php://temp</literal> solamente.
        </entry>
       </row>
       <row>
        <entry>Permite Lecturas</entry>
        <entry>
-        solo <literal>php://stdin</literal>,
+        <literal>php://stdin</literal>,
         <literal>php://input</literal>,
+        <literal>php://fd</literal>,
         <literal>php://memory</literal> y
-        <literal>php://temp</literal>.
+        <literal>php://temp</literal> solamente.
        </entry>
       </row>
       <row>
        <entry>Permite Escrituras</entry>
        <entry>
-        solo <literal>php://stdout</literal>,
+        <literal>php://stdout</literal>,
         <literal>php://stderr</literal>,
         <literal>php://output</literal>,
+        <literal>php://fd</literal>,
         <literal>php://memory</literal> y
-        <literal>php://temp</literal>.
+        <literal>php://temp</literal> solamente.
        </entry>
       </row>
       <row>
        <entry>Permite Añadir contenidos</entry>
        <entry>
-        solo <literal>php://stdout</literal>,
+        <literal>php://stdout</literal>,
         <literal>php://stderr</literal>,
         <literal>php://output</literal>,
+        <literal>php://fd</literal>,
         <literal>php://memory</literal> y
-        <literal>php://temp</literal>. (Equivalente a escrituras)
+        <literal>php://temp</literal> solamente. (Equivalente a escrituras)
        </entry>
       </row>
       <row>
        <entry>Permite Lecturas y Escrituras Simultáneas</entry>
        <entry>
-        solo <literal>php://memory</literal> y
-        <literal>php://temp</literal>.
+        <literal>php://fd</literal>,
+        <literal>php://memory</literal> y
+        <literal>php://temp</literal> solamente.
        </entry>
       </row>
       <row>
        <entry>Permite usar la función <function>stat</function></entry>
        <entry>
-        solo <literal>php://memory</literal> y
-        <literal>php://temp</literal> .
+        <literal>php://memory</literal> y
+        <literal>php://temp</literal> solamente.
        </entry>
       </row>
       <row>
@@ -177,8 +188,11 @@
       <row>
        <entry>Permite usar la función <function>stream_select</function></entry>
        <entry>
-        <literal>php://stdin</literal>, <literal>php://stdout</literal>, 
-        <literal>php://stderr</literal> y <literal>php://temp</literal>.
+        <literal>php://stdin</literal>,
+        <literal>php://stdout</literal>,
+        <literal>php://stderr</literal>,
+        <literal>php://fd</literal> y
+        <literal>php://temp</literal> solamente.
        </entry>
       </row>
      </tbody>
