--- a/language/wrappers/compression.xml
+++ b/language/wrappers/compression.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 6ee7facd42a9462a74259d003110848c30251c9a Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 38bc312a17120963ffed8b6f660d1af53e91ae28 Maintainer: yago Status: ready -->
 
 <refentry xml:id="wrappers.compression" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
-  <refname>zlib, bzip2 and zip</refname>
+  <refname>zlib://</refname>
+  <refname>bzip2://</refname>
+  <refname>zip://</refname>
   <refpurpose>Flujos de compresión</refpurpose>
  </refnamediv>
 
