--- a/language/wrappers/php.xml
+++ b/language/wrappers/php.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: b715f40087cc001bc3e69f35f4a1cb842a806ea6 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 38bc312a17120963ffed8b6f660d1af53e91ae28 Maintainer: yago Status: ready -->
 
 <refentry xml:id="wrappers.php" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
-  <refname>entrada/salida de PHP</refname>
+  <refname>php://</refname>
   <refpurpose>Acceso a distintos flujos de E/S</refpurpose>
  </refnamediv>
 
