--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 7913c8c0ce4fcfda9f63459f632ef0a8abcfdef6 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 557d9ad881f369384caa0266abde410a91b50e36 Maintainer: jpberdejo Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
@@ -1567,10 +1567,10 @@ echo "Debe ser 4: " . $a . "<br />\n";
    </para>
    <para>
     PHP sigue la convención de Perl cuando trabaja con operaciones aritméticas
-    sobre variables de caracteres y no la de C. Por ejemplo, en Perl
-    <literal>'Z'+1</literal> se convierte en <literal>'AA'</literal>, mientras que en C
-    <literal>'Z'+1</literal> se convierte en <literal>'['</literal>
-    ( <literal>ord('Z') == 90</literal>, <literal>ord('[') == 91</literal> ).
+    sobre variables de caracteres y no la de C. Por ejemplo, en PHP y Perl
+    <literal>$a = 'Z'; $a++;</literal> convierte <literal>$a</literal> en <literal>'AA'</literal>, mientras que en C
+    <literal>a = 'Z'; a++;</literal> convierte <literal>a</literal> en <literal>'['</literal>
+    (el valor ASCII de <literal>'Z'</literal> es 90, el valor ASCII de <literal>'['</literal> es 91).
     Note que las variables de caracteres pueden ser incrementadas pero no decrementadas y
     aun así sólo caracteres de ASCII plano (a-z y A-Z) están soportados.
     <example>
