English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@310589 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 557d9ad881f369384caa0266abde410a91b50e36 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 22ac47b4feec22bc8867004b6faf9a6623e98b68 Maintainer: jpberdejo Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
@@ -1571,8 +1571,10 @@ echo "Debe ser 4: " . $a . "<br />\n";
     <literal>$a = 'Z'; $a++;</literal> convierte <literal>$a</literal> en <literal>'AA'</literal>, mientras que en C
     <literal>a = 'Z'; a++;</literal> convierte <literal>a</literal> en <literal>'['</literal>
     (el valor ASCII de <literal>'Z'</literal> es 90, el valor ASCII de <literal>'['</literal> es 91).
-    Note que las variables de caracteres pueden ser incrementadas pero no decrementadas y
+    Nótese que las variables de caracteres pueden ser incrementadas pero no decrementadas y
     aun así sólo caracteres de ASCII plano (a-z y A-Z) están soportados.
+    Incrementar o decrementar otras variables de caracteres no tiene efecto, el
+    string original no se modifica.
     <example>
      <title>Operaciones aritméticas sobre variables de caracteres</title>
      <programlisting role="php">
