English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@310746 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/continue.xml
+++ b/language/control-structures/continue.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 0d928cd430ddf3e9aa760f8aaaebd66e21d1eab9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: bb33d2a40c73ce3f55252c2254fef0c05d15f5f9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.continue" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>continue</literal></title>
@@ -42,16 +42,16 @@ while (list($key, $value) = each($arr)) {
 
 $i = 0;
 while ($i++ < 5) {
-    echo "Externo<br />\n";
+    echo "Outer<br />\n";
     while (1) {
-        echo "Medio<br />\n";
+        echo "Middle<br />\n";
         while (1) {
-            echo "Interno<br />\n";
+            echo "Inner<br />\n";
             continue 3;
         }
-        echo "Esto nunca da salida.<br />\n";
+        echo "This never gets output.<br />\n";
     }
-    echo "Tampoco ésta la da.<br />\n";
+    echo "Neither does this.<br />\n";
 }
 ?>
 ]]>
@@ -95,9 +95,11 @@ for ($i = 0; $i < 5; ++$i) {
 ]]>
     </screen>
     <para>
-     debido a que valor de retorno de la llamada a <function>print</function>
-     es <literal>int(1)</literal> y se verá como el
-     argumento numérico opcional antes mencionado.
+     debido a que el <literal>continue print "$i\n";</literal> se evalúa completo
+     como una sola expresión y así <function>print</function> se llama solamente
+     cuando <literal>$i == 2</literal> es verdadero. (El valor de retorno de
+     <literal>print</literal> es pasado a <literal>continue</literal> como el
+     argumento numérico.)
     </para>
    </informalexample>
   </para>
