English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@310797 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/include.xml
+++ b/language/control-structures/include.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 0a3b308c70bc29fbb1cbb4a28d00195946407f89 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 64042ccbff18c092f57ab4cc7547a554ba5b51d5 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="function.include" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><function>include</function></title>
@@ -24,10 +24,10 @@
   <link linkend="errorfunc.constants.errorlevels.e-error">error fatal.</link>.
  </simpara>
  <simpara>
-  Si una ruta es definida &mdash; ya sea absoluta (comenzando con una letra de unidad
+  Si una ruta es definida — ya sea absoluta (comenzando con una letra de unidad
   o <literal>\</literal> en Windows o <literal>/</literal> en sistemas Unix/Linux) o relativa al
   directorio actual (comenzando con <literal>.</literal> o
-  <literal>..</literal>) &mdash; el
+  <literal>..</literal>) — el
   <link linkend="ini.include-path">include_path</link> será ignorado
   por completo. Por ejemplo, si un nombre de archivo comienza con <literal>../</literal>,
   el interprete buscará en el directorio padre para encontrar el archivo solicitado.
