File updated to the lastest english version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@311328 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/basic-syntax.xml
+++ b/language/basic-syntax.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 61bb68cc6d7229771fc96879075a0fa7598716d6 Maintainer: yago Status: ready -->
+<!-- EN-Revision: bb33d2a40c73ce3f55252c2254fef0c05d15f5f9 Maintainer: yago Status: ready -->
  <chapter xml:id="language.basic-syntax" xmlns="http://docbook.org/ns/docbook">
   <title>Sintaxis básica</title>
   <sect1 xml:id="language.basic-syntax.phpmode">
@@ -32,11 +32,11 @@
 <?php
 if ($expression) {
     ?>
-    <strong>This is true.</strong>
+    <strong>Esto es verdadero.</strong>
     <?php
 } else {
     ?>
-    <strong>This is false.</strong>
+    <strong>Esto es falso.</strong>
     <?php
 }
 ?>
@@ -197,8 +197,8 @@ if ($expression) {
     <informalexample>
      <programlisting role="php">
 <![CDATA[
-<h1>This is an <?php # echo 'simple';?> example.</h1>
-<p>The header above will say 'This is an  example'.</p>
+<h1>Esto es un <?php # echo 'simple';?> ejemplo</h1>
+<p>El encabezado anterior dirá 'Esto es un  ejemplo'.</p>
 ]]>
      </programlisting>
     </informalexample>
