File updated to the lastest english version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@311682 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/visibility.xml
+++ b/language/oop5/visibility.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 9491eaf09cf62617ebf3921a42e51e5291010b6d Maintainer: x1v4nx Status: ready -->
+<!-- EN-Revision: 84fee8e038581781a81abd8a20809d913700c840 Maintainer: x1v4nx Status: ready -->
 <!-- Reviewed: no -->
 
  <sect1 xml:id="language.oop5.visibility" xmlns="http://docbook.org/ns/docbook">
@@ -19,9 +19,8 @@
    <title>Visibilidad de Propiedades</title>
    <para>
     Las propiedades de clases deben ser definidas como public, private,
-    o protected.Si se declaran usando <emphasis>var</emphasis> sin
-    una palabra clave de visibilidad explícita, serán definidas como
-    public.
+    o protected. Si se declaran usando <emphasis>var</emphasis>,
+    serán definidas como public.
    </para>
    <para>
     <example>
