updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@312053 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 64042ccbff18c092f57ab4cc7547a554ba5b51d5 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 8a153b8ae6b30de8b63aac959e6cef0cafa8e1e1 Maintainer: yago Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
-   Un operador es algo que se alimenta uno o más valores (o
-   expresiones, en jerga de programación) el cual entrega otro valor (de modo que la
-   construcción en si misma se convierte en una expresión). Así que se puede pensar en funciones
-   o construcciones que retornen un valor (como print) como operadores y aquellos
-   que no retornan nada (como echo) como cualquier otra cosa.
+   Un operador es algo que se alimenta de uno o más valores (o
+   expresiones, en jerga de programación) y entrega otro valor (de modo que 
+   la construcción en si misma se convierte en una expresión).
   </simpara>
   <para>
-   Hay tres tipos de operadores. En primer lugar se encuentra el operador unario, el cual
-   opera sobre un único valor, por ejemplo ! (el operador de negación) o ++
-   (el operador de incremento). El segundo grupo se conoce como operadores binarios; este
-   grupo contiene la mayoría de los operadores que soporta PHP y una lista sigue más
-   adelante en la sección <link linkend="language.operators.precedence">Precedencia de
-   operadores</link>.
+   Los operadores se pueden agrupar según el número de valores que toman. Los
+   operadores unarios solo toman un valor, por ejemplo <literal>!</literal> (El
+   <link linkend="language.operators.logical">operador lógico de negación </link>) o
+   <literal>++</literal> (el
+   <link linkend="language.operators.increment">operador de incremento</link>).
+   Los operadores binarios toman dos valores, como los conocidos
+   <link linkend="language.operators.arithmetic">operadores aritméticos</link>
+   <literal>+</literal> (mas) y <literal>-</literal> (menos), y la
+   gran mayoría de operadores PHP están bajo esta categoría. Finalmente, hay uno
+   suelo: el <link linkend="language.operators.comparison.ternary">operador
+   ternario</link>, <literal>? :</literal>, que toma tres valores; normalmente se
+   hace referencia simplemente por "el operador ternario" (aunque quizá podría
+   llamarse más correctamente el operador condicional).
   </para>
   <para>
-   El tercer grupo es el operador ternario:?:. Se debe utilizar para seleccionar
-   entre dos expresiones dependiendo de una tercera, en lugar de seleccionar dos
-   sentencias o rutas de ejecución. Rodear las expresiones ternarias con
-   paréntesis es una muy buena idea.
+   Una lista completa de los operadores puede encontrase en la sección
+   <link linkend="language.operators.precedence">Precedencia de operadores</link>.
+   También se explica la presencia de operadores y capacidad de asociacción y 
+   como expresiones que contiene varios operadores son evaludadas.
   </para>
 
   <sect1 xml:id="language.operators.precedence">
@@ -35,14 +40,18 @@
     tiene una precedencia mayor que el operador de adición ("+").
     Los paréntesis pueden ser usados para forzar la precedencia, si es necesario. Por
     ejemplo: <literal>(1 + 5) * 3</literal> se evalúa como
-    <literal>18</literal>. Si la precedencia de operadores es la misma, de izquierda a derecha
-    se utiliza la asociatividad.
+    <literal>18</literal>.
    </para>
    <para>
-    La siguiente tabla lista la precedencia de los operadores con los
-    operadores de mayor precedencia listados en la parte superior de la tabla. Los operadores
-    en la misma línea tienen la misma precedencia, en cuyo caso su
-    asociatividad decide cual el el orden para evaluarlos.
+    Cuando operadores tienen la misma precedencia, su capacidad de asociacción
+    decide cuando se evaluan empezand por la derecha o empezando por
+    la izquierda - ver los ejemplos que se muestran debajo.
+   </para> 
+   <para>    
+    La siguente table lista los operadores en orden de precedencia, con los
+    operadores de mayor precedencia en la parte superior. Los operadores en la misma línea
+    tienen la misma precedencia, en cuyo caso su capacidad de asociación decide
+    cual es el orden para evaluarlos.
     <table>
      <title>Precedencia de operadores</title>
      <tgroup cols="2">
@@ -209,8 +218,9 @@
     </table>
    </para>
    <para>
-    Asociatividad izquierda significa que la expresión es evaluada de izquierda a derecha,
-    asociatividad derecha quiere decir lo contrario.
+    Para los operadores con la misma precedencia, asociatividad izquierda significa
+    que la evaluación se procede de izquierda a derecha y asociatividad derecha significa
+    lo contrario.   
     <example>
      <title>Asociatividad</title>
      <programlisting role="php">
@@ -230,7 +240,8 @@ echo ++$a + $a++; // puede mostrar 4 o 5
 ]]>
      </programlisting>
     </example>
-    Usar paréntesis para incrementar la legibilidad del código.
+    Usar paréntesis aunque no sea estrictamente necesario, puede incrementar
+    la legibilidad del código.
    </para>
    <note>
     <para>
@@ -1367,7 +1378,7 @@ if (empty($_POST['action'])) {
       comportamiento de PHP al utilizar más de un operador ternario en una única
       sentencia no es evidente:
       <example>
-       <title>Non-obvious Ternary Behaviour</title>
+       <title>Comportamiento Ternario poco obvio</title>
        <programlisting role="php">
 <![CDATA[
 <?php
@@ -1794,9 +1805,10 @@ $a .= "World!";     // ahora $a contiene "Hello World!"
     </tgroup>
    </table>
    <para>
-    El operador <literal>+</literal>
-    añade elementos de las claves restantes del array del lado derecho al
-    del lado izquierdo, mientras que las claves duplicadas NO son sobrescritas.
+    El operador <literal>+</literal> devuelve el array del lado derecho añadido
+    al array del lado izquierdo. Para las claves que existen en los dos arrays los elementos
+    del array del lado izquierdo serán usados y los elementos que sean iguales del
+    array del lado derecho serán ignorados.
    </para>
    <para>
     <informalexample>
@@ -1810,7 +1822,7 @@ $c = $a + $b; // Unión de $a y $b
 echo "Union of \$a and \$b: \n";
 var_dump($c);
 
-$c = $b + $a; // Union of $b and $a
+$c = $b + $a; // Unión de $b y $a
 echo "Union of \$b and \$a: \n";
 var_dump($c);
 ?>
@@ -2059,7 +2071,7 @@ bool(false)
     Antes de esta época se utilizaba <function>is_a</function>, pero
     desde entonces <function>is_a</function> se ha quedado obsoleto en favor de
     <literal>instanceof</literal>. Tenga en cuenta que a partir de PHP 5.3.0,
-    <function>is_a</function> ya no es obsoleto.
+    <function>is_a</function> ya no está obsoleto.
    </simpara>
    <para>
     Ver también <function>get_class</function> y
