English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@312054 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 8a153b8ae6b30de8b63aac959e6cef0cafa8e1e1 Maintainer: yago Status: ready -->
+<!-- EN-Revision: 8a153b8ae6b30de8b63aac959e6cef0cafa8e1e1 Maintainer: jpberdejo Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
-   Un operador es algo que se alimenta de uno o más valores (o
-   expresiones, en jerga de programación) y entrega otro valor (de modo que 
-   la construcción en si misma se convierte en una expresión).
+   Un operador es algo que toma uno más valores (o
+   expresiones, en jerga de programación) y produce otro valor (de modo que la
+   construcción en si misma se convierte en una expresión).
   </simpara>
   <para>
-   Los operadores se pueden agrupar según el número de valores que toman. Los
-   operadores unarios solo toman un valor, por ejemplo <literal>!</literal> (El
-   <link linkend="language.operators.logical">operador lógico de negación </link>) o
+   Los operadores se pueden agrupar de acuerdo con el número de valores que toman. Los operadores
+   unarios toman sólo un valor, por ejemplo <literal>!</literal> (el
+   <link linkend="language.operators.logical">operador lógico de negación</link>) o
    <literal>++</literal> (el
    <link linkend="language.operators.increment">operador de incremento</link>).
-   Los operadores binarios toman dos valores, como los conocidos
+   Los operadores binarios toman dos valores, como los familiares
    <link linkend="language.operators.arithmetic">operadores aritméticos</link>
-   <literal>+</literal> (mas) y <literal>-</literal> (menos), y la
-   gran mayoría de operadores PHP están bajo esta categoría. Finalmente, hay uno
-   suelo: el <link linkend="language.operators.comparison.ternary">operador
-   ternario</link>, <literal>? :</literal>, que toma tres valores; normalmente se
-   hace referencia simplemente por "el operador ternario" (aunque quizá podría
-   llamarse más correctamente el operador condicional).
+   <literal>+</literal> (suma) y <literal>-</literal> (resta), y la
+   mayoría de los operadores de PHP entran en esta categoría. Finalmente, hay sólo
+   un <link linkend="language.operators.comparison.ternary">operador
+   ternario</link>, <literal>? :</literal>, el cual toma tres valores; usualmente a este se
+   le refiere simplemente como "el operador ternario" (aunque podría
+   tal vez llamarse más correctamente como el operador condicional).
   </para>
   <para>
-   Una lista completa de los operadores puede encontrase en la sección
-   <link linkend="language.operators.precedence">Precedencia de operadores</link>.
-   También se explica la presencia de operadores y capacidad de asociacción y 
-   como expresiones que contiene varios operadores son evaludadas.
+   Una lista completa de operadores de PHP sigue en la sección
+   <link linkend="language.operators.precedence">Precedencia de Operadores</link>.
+   Está también explica la precedencia y asociatividad, las cuales gobiernan
+   exactamente como son evaluadas expresiones que contienen varios diferentes
+   operadores.
   </para>
 
   <sect1 xml:id="language.operators.precedence">
@@ -43,15 +44,15 @@
     <literal>18</literal>.
    </para>
    <para>
-    Cuando operadores tienen la misma precedencia, su capacidad de asociacción
-    decide cuando se evaluan empezand por la derecha o empezando por
-    la izquierda - ver los ejemplos que se muestran debajo.
-   </para> 
-   <para>    
-    La siguente table lista los operadores en orden de precedencia, con los
-    operadores de mayor precedencia en la parte superior. Los operadores en la misma línea
-    tienen la misma precedencia, en cuyo caso su capacidad de asociación decide
-    cual es el orden para evaluarlos.
+    Cuando los operadores tienen la misma precedencia, su asociatividad decide
+    si se evalúan a partir de la derecha o desde
+    la izquierda - ver más abajo los ejemplos.
+   </para>
+   <para>
+    La siguiente tabla lista en orden la precedencia de los operadores, con los
+    operadores de mayor precedencia en la parte superior. Los operadores
+    en la misma línea tienen la misma precedencia, en cuyo caso su
+    asociatividad decide cuál es el orden de evaluación.
     <table>
      <title>Precedencia de operadores</title>
      <tgroup cols="2">
@@ -218,9 +219,9 @@
     </table>
    </para>
    <para>
-    Para los operadores con la misma precedencia, asociatividad izquierda significa
-    que la evaluación se procede de izquierda a derecha y asociatividad derecha significa
-    lo contrario.   
+    Para operadores de igual precedencia, asociatividad izquierda significa que
+    la evaluación procede de la izquierda a la derecha y asociatividad derecha significa
+    lo opuesto.
     <example>
      <title>Asociatividad</title>
      <programlisting role="php">
@@ -240,7 +241,7 @@ echo ++$a + $a++; // puede mostrar 4 o 5
 ]]>
      </programlisting>
     </example>
-    Usar paréntesis aunque no sea estrictamente necesario, puede incrementar
+    El uso de paréntesis, incluso cuando no es estrictamente necesario, a menudo puede mejorar
     la legibilidad del código.
    </para>
    <note>
@@ -1806,9 +1807,9 @@ $a .= "World!";     // ahora $a contiene "Hello World!"
    </table>
    <para>
     El operador <literal>+</literal> devuelve el array del lado derecho añadido
-    al array del lado izquierdo. Para las claves que existen en los dos arrays los elementos
-    del array del lado izquierdo serán usados y los elementos que sean iguales del
-    array del lado derecho serán ignorados.
+    al array del lado izquierdo; para las claves que existan en ambos arrays, serán utilizados
+    los elementos del array de la izquierda y serán ignorados los elementos correspondientes del
+    array de la derecha.
    </para>
    <para>
     <informalexample>
@@ -2100,4 +2101,3 @@ vim600: syn=xml fen fdm=syntax fdl=2 si
 vim: et tw=78 syn=sgml
 vi: ts=1 sw=1
 -->
-
